--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/1.png" class="img-fluid " alt="">
+                <img src="img/1.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">1</h2></center>
                 </div>
@@ -44,7 +44,7 @@
             </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/2.png" class="img-fluid " alt="">
+                <img src="img/2.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">2</h2></center>
                 </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/3.png" class="img-fluid " alt="">
+                <img src="img/3.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">3</h2></center>
                 </div>
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/5.png" class="img-fluid " alt="">
+                <img src="img/5.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">5</h2></center>
                 </div>
@@ -75,7 +75,7 @@
             </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/9-1.png" class="img-fluid " alt="">
+                <img src="img/9-1.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">9</h2></center>
                 </div>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/9-2.png" class="img-fluid " alt="">
+                <img src="img/9-2.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">9</h2></center>
                 </div>
