--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/3.jpg" class="img-fluid " alt="">
+                <img src="img/3.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">3</h2></center>
                 </div>
@@ -75,7 +75,7 @@
             </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/9-1.jpg" class="img-fluid " alt="">
+                <img src="img/9-1.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">9</h2></center>
                 </div>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-md-4">
             <div class="view overlay hm-red-strong">
-                <img src="img/9-2.jpg" class="img-fluid " alt="">
+                <img src="img/9-2.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
                     <center><h2 class="white-text">9</h2></center>
                 </div>
