--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           <p><b>The Philosophy</b></p>
           <p>STANDA≥D is an inclusive, gender-free, affordable clothing brand. As a company, STANDA≥D embraces difference, individuality, and imperfection. It seeks to eliminate the idea of the ‘model’ in favor of a collective notion that sees every individual as a standard of their own. STANDA≥D seeks to use clothing and digital platforms to address social questions of diversity, civic rights, and cultural norms of perceived individual value.</p>
           <br>
-          <p><b>Be the Standard</b></p>
-          <p>Text Ben at +1 609 651 6356</p>
+          <p><b>be the standa≥d</b>: text Ben at +1 609 651 6356</p>
         </div>
       </div>
 
