--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/1.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">1</h2></center>
+                  <center><h2 class="white-text">1&nbsp;</h2></center>
+                  <center><h5 class="white-text">Ben</h5></center>
                 </div>
             </div>
             </div>
@@ -45,7 +46,8 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/2.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">2</h2></center>
+                  <center><h2 class="white-text">2&nbsp;</h2></center>
+                  <center><h5 class="white-text">Mike</h5></center>
                 </div>
             </div>
           </div>
@@ -53,10 +55,9 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/3.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">3</h2></center>
+                  <center><h2 class="white-text">3&nbsp;</h2></center>
+                  <center><h5 class="white-text">Matt</h5></center>
                 </div>
-            </div>
-          </div>
         </div>
 
         <hr>
@@ -68,7 +69,8 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/5.jpg" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">5</h2></center>
+                  <center><h2 class="white-text">5&nbsp;</h2></center>
+                  <center><h5 class="white-text">Jack</h5></center>
                 </div>
             </div>
             </div>
@@ -76,7 +78,8 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/9-1.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">9</h2></center>
+                  <center><h2 class="white-text">9&nbsp;</h2></center>
+                  <center><h5 class="white-text">Dan</h5></center>
                 </div>
             </div>
           </div>
@@ -84,7 +87,8 @@
             <div class="view overlay hm-red-strong">
                 <img src="img/9-2.JPG" class="img-fluid " alt="">
                 <div class="mask flex-center">
-                    <center><h2 class="white-text">9</h2></center>
+                  <center><h2 class="white-text">9&nbsp;</h2></center>
+                  <center><h5 class="white-text">Dan</h5></center>
                 </div>
             </div>
           </div>
